# rsproj-777

./: .gitignore  README.md  SCRIPT.md  package.json  startQemu.sh
@archive/: package.json
@archive/src/: 00-buildep-packages.sh  14-install-secutiry-packages.sh  21-install-enhance-packages.sh  35-setup-install-ngetty.sh  git-fetch-all-proj.sh  setupBootloader  setupBootloaderChroot  sourceDeviceDisk  sourceDeviceDiskPartition
@asset/src/: splash640.kra
@fsystem/: package.json  start.js
@fsystem/script/: 00-setup-release.sh  03-setup-apt.sh  14-setup-xdg.sh  17-setup-neofetch.sh  22-setup-nmconf.sh  23-setup-pulseconf.sh  24-setup-grubd.sh  25-setup-grub.sh  26-setup-logindefs.sh  27-setup-resolvconf.sh  28-setup-hosts.sh  42-setup-lib.sh
@fsystem/src/: etc.login.defs  etc.os-release
@grub/isolinux/: boot.cat  install.cfg  isolinux.cfg  live.cfg
@installer/17g/: deps.sh  install.sh
@kcmguis/: Makefile  deps.sh  make.sh  post.js
@kcmguis/asset/: compositor-edge-actions.desktop  compositor-hotkeys.desktop  compositor-keyboard-layout.desktop  compositor-mouse-trackpad.desktop  compositor-rules.desktop  compositor-scripts.desktop  compositor-styles.desktop  compositor.desktop
@kcmguis/src/: LICENSE  startrspkwin.in
@libjscript/: package-lock.json
@libjscript/src/: prompt.js
@remaster/script/: 07-make-install-deps.js  14-make-install-lxqt-deps.js  21-make-install-apps.js  28-make-install-lxqt-apps.js
@remaster/src/apps-lxqt/50-rsp-panel-menu/asset/: CMakeLists.txt
@rspu/: .bash_history  .bashrc  .gtkrc-2.0
@rspu/.config/: QtProject.conf  Trolltech.conf  gtkrc  gtkrc-2.0  kcminputrc  kde-env-master.sh  kdeglobals  kwinoutputconfig.json  kwinrc  kwinrulesrc  mimeapps.list  plasma-localerc  plasma-org.kde.plasma.desktop-appletsrc  rsp-mimeapps.list  user-dirs.dirs
@rspu/.fontconfig/: 188ac73a183f12857f63bb60a4a6d603-le64.cache-9  32b6488e5b8292a2e95c79d947e009e8-le64.cache-9  3830d5c3ddfd5cd38a049b759396e72e-le64.cache-9  3f7329c5293ffd510edef78f73874cfd-le64.cache-9  4c599c202bc5c08e2d34565a40eac3b2-le64.cache-9  573ec803664ed168555e0e8b6d0f0c7f-le64.cache-9  57e423e26b20ab21d0f2f29c145174c3-le64.cache-9  6333f38776742d18e214673cd2c24e34-le64.cache-9  6cc790b63b123a6a96ee260fcdad32a9-le64.cache-9  707971e003b4ae6c8121c3a920e507f5-le64.cache-9  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-9  95530828ff6c81d309f8258d8d02a23e-le64.cache-9  9b89f8e3dae116d678bbf48e5f21f69b-le64.cache-9  a0107c79d978dfcc5e42cb1335b71036-le64.cache-9  a4e60e8d1e10d2fdff3fe3037a1845fb-le64.cache-9  bf3b770c553c462765856025a94f1ce6-le64.cache-9  c57959a16110560c8d0fcea73374aeeb-le64.cache-9  c855463f699352c367813e37f3f70ea7-le64.cache-9  cabbd14511b9e8a55e92af97fb3a0461-le64.cache-9  d0972c3d32f097851eb916381fc38920-le64.cache-9  d3e5c4ee2ceb1fc347f91d4cefc53bc0-le64.cache-9  d589a48862398ed80a3d6066f4f56f4c-le64.cache-9  d82eb4fd963d448e2fcb7d7b793b5df3-le64.cache-9  e13b20fdb08344e0e664864cc2ede53d-le64.cache-9  e52a45a1c8c8fe895fc0fc8c4e6999b8-le64.cache-9  f1f2465696798768e9653f19e17ccdc8-le64.cache-9  fe547fea3a41b43a38975d292a2b19c7-le64.cache-9
@rspu/.resolveFirstRun.js/: configUtils.mjs  fsUtils.mjs  index.mjs  userUtils.mjs
@rspu/.thunderbird/: profiles.ini
@rspu/Space/: installer.desktop
@scripts/asset/: caja.desktop  check-os-release.service  developmentPackages.json  latestDevelopmentPackages.json  network-settings.desktop  org.kde.mobile.plasmasettings.desktop  remove-rsp-user.service
@scripts/bootstrap/: 00-install-essential-packages.sh  03-install-basic-build-packages.sh  07-install-setup-nodejs.sh  10-install-desktop-packages.sh  14-install-essential-libraries.sh  index.sh
@scripts/deploy/: cleanVarDirectory-offline.sh  cleanVarDirectory.sh  deepSystemCleanup-offline.sh  (+12 more)
(+687 files in other folders)
